Fixed Error message bug

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           >
             <i class="fas fa-search"></i>
           </button>
-          <p class="error py-3 text-gray-600 text-center hidden">
+          <p class="error py-3 text-white text-center hidden">
             City doesn't exists
           </p>
         </form>
